[gd_scene load_steps=2 format=3 uid="uid://tbusstgx01li"]

[ext_resource type="Script" path="res://Scenes/MenuScripts.gd" id="1_tmwdc"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tmwdc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.5
offset_top = -195.5
offset_right = 330.5
offset_bottom = 195.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 20

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 72
text = "Galley Rush"
horizontal_alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="Settings" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 32
text = "Settings
"

[node name="Leaderboard" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Leaderboard
"

[node name="Exit" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/Exit" to="." method="_on_button_pressed"]
